--- a/dado.css
+++ b/dado.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #0b72a569;
+  background-color: rgb(11, 114, 165, 0.39);
 }
 #dado {
   background-color: #80808069;
@@ -26,3 +26,4 @@ body{
   width: 300px;
   margin-bottom: 20px;
 }
+  background-color: #0b72a569;
